@@ -55,40 +55,10 @@
       "description": "TODO: it should be independant of framerate"
     },
     {
-      "name": "CAMERA_MOUSE_SCROLL_SENSITIVITY",
-      "type": "FLOAT",
-      "value": 1.5,
-      "description": ""
-    },
-    {
       "name": "CAMERA_ORBITAL_SPEED",
       "type": "FLOAT",
       "value": 0.5,
       "description": "Radians per second"
-    },
-    {
-      "name": "CAMERA_FIRST_PERSON_STEP_TRIGONOMETRIC_DIVIDER",
-      "type": "FLOAT",
-      "value": 8.0,
-      "description": ""
-    },
-    {
-      "name": "CAMERA_FIRST_PERSON_STEP_DIVIDER",
-      "type": "FLOAT",
-      "value": 30.0,
-      "description": ""
-    },
-    {
-      "name": "CAMERA_FIRST_PERSON_WAVING_DIVIDER",
-      "type": "FLOAT",
-      "value": 200.0,
-      "description": ""
-    },
-    {
-      "name": "PLAYER_MOVEMENT_SENSITIVITY",
-      "type": "FLOAT",
-      "value": 20.0,
-      "description": ""
     }
   ],
   "structs": [
