@@ -157,7 +157,7 @@ module Raylib
   KEY_KP_ENTER = 335      # Key: Keypad Enter
   KEY_KP_EQUAL = 336      # Key: Keypad =
   KEY_BACK = 4            # Key: Android back button
-  KEY_MENU = 82           # Key: Android menu button
+  KEY_MENU = 5            # Key: Android menu button
   KEY_VOLUME_UP = 24      # Key: Android volume up button
   KEY_VOLUME_DOWN = 25    # Key: Android volume down button
 
